    ```

    This will condense the output generated, before it was something like this:

    ```
    Started POST "/" for 127.0.0.1 at 2012-03-10 14:28:14 +0100
    Processing by HomeController#index as HTML
      Rendered text template within layouts/application (0.0ms)
      Rendered layouts/_assets.html.erb (2.0ms)
      Rendered layouts/_top.html.erb (2.6ms)
      Rendered layouts/_about.html.erb (0.3ms)
      Rendered layouts/_google_analytics.html.erb (0.4ms)
    Completed 200 OK in 79ms (Views: 78.8ms | ActiveRecord: 0.0ms)
    ```
 * In previous releases it was possible to delete attributes through
   /source/<project>/_attribute/?namespace=OBS&name=VeryImportantProject (or similiar
   for packages). You need to follow the documentation now and the proper
   route is /source/<project>/_attribute/OBS:VeryImportantProject

 * GET '/attribute/:attribute' route responded with a 400 when the attribute type
   did not exist. It now returns a 404 status.

 * GET '/source/<project>/_attribute' allowed to filter by namespace. This was never
   documented and was removed now. '/_attribute' will return all attributes, while
   '/_attribute/:attribute' keeps returning only the given attribute (as documented)


Other changes
=============


Notes for systems using systemd:
================================

OBS is using init scripts, not systemd style .service files. This will stay until
we will switch from SLES 11 to SLES 12 as default production platform.

openSUSE installations may use systemd (instead of sysvinit) and it should work
in general. Not working are usages like:

 # rcobssrcserver status

You will only get the systemd status here.

Also stopping services may not kill all processes, which leads to abstract errors
when trying to restart them. We heard also about trashed MySQL databases when using
systemd.

To avoid these problems you need switch directory to avoid the systemd mapper:

 # cd /etc/init.d
 # ./obssrcserver status|stop|start