@@ -1,4 +1,3 @@
-
 xml.status_messages(count: @count) do
   @messages.each do |msg|
     xml.message(
